Fixed card button on mobile to be 100% width

--- a/styles/_partials/5_buttons.styl
+++ b/styles/_partials/5_buttons.styl
@@ -64,16 +64,9 @@ button, .button
 
   &-card
     border-radius 0
-    width calc(100% + 1.5rem)
+    width calc(100% + 1.5rem) !important
     margin 0 -.75rem
     box-sizing border-box
-    background-image url("/images/icons/arrow-right.svg")
-    background-repeat no-repeat
-    background-position right 2.25rem center
-    transition background-position 0.3s ease-in-out
-
-    &:hover
-      background-position right 1.5rem center
 
   &-flash-remove
     position absolute
